[gd_scene load_steps=22 format=2]

[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga7.png" type="Texture" id=1]
[ext_resource path="res://Juego/naves/Estaciones/estacionEnemiga1.png" type="Texture" id=2]
[ext_resource path="res://Juego/naves/Estaciones/BaseEnemiga.gd" type="Script" id=3]
[ext_resource path="res://Juego/naves/player/laser/impacto.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/naves/Estaciones/AreaColision.gd" type="Script" id=5]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga3.png" type="Texture" id=6]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga11.png" type="Texture" id=7]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga5.png" type="Texture" id=8]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga2.png" type="Texture" id=9]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga6.png" type="Texture" id=10]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga4.png" type="Texture" id=11]
[ext_resource path="res://Juego/naves/Estaciones/AreaDeAtraccion.tscn" type="PackedScene" id=12]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga10.png" type="Texture" id=13]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga9.png" type="Texture" id=14]
[ext_resource path="res://Juego/naves/Estaciones/EstacionEnemiga8.png" type="Texture" id=15]

[sub_resource type="CapsuleShape2D" id=4]
radius = 58.4149
height = 208.577

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 138, 21.9994 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.21668, 35.8527 )

[sub_resource type="Animation" id=1]
resource_name = "default"

[sub_resource type="Animation" id=2]
resource_name = "rotacion_antihorario"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="BaseEnemiga" type="Node2D"]
rotation = -6.28319
z_index = 400
script = ExtResource( 3 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="Sprites"]
position = Vector2( -79.9584, -0.746475 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 0, -32 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 80, 0 )
rotation = 3.14159
texture = ExtResource( 6 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 118.876, 0.37458 )
rotation = -3.14159
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="Sprites"]
position = Vector2( -0.151321, 37.2634 )
texture = ExtResource( 8 )

[node name="Sprite7" type="Sprite" parent="Sprites"]
position = Vector2( 0.218635, 166.797 )
rotation = 1.5708
texture = ExtResource( 10 )

[node name="Sprite8" type="Sprite" parent="Sprites"]
position = Vector2( 0, -128 )
scale = Vector2( 1.14865, 0.963963 )
texture = ExtResource( 1 )

[node name="Sprite9" type="Sprite" parent="Sprites"]
position = Vector2( 42.7692, 75.2419 )
rotation = 1.5708
texture = ExtResource( 15 )

[node name="Sprite10" type="Sprite" parent="Sprites"]
position = Vector2( -43.3065, 74.7832 )
rotation = -1.5708
texture = ExtResource( 15 )

[node name="Sprite11" type="Sprite" parent="Sprites"]
position = Vector2( 0, -72 )
texture = ExtResource( 14 )

[node name="Sprite12" type="Sprite" parent="Sprites"]
position = Vector2( -0.68988, 75.1203 )
texture = ExtResource( 13 )

[node name="Sprite13" type="Sprite" parent="Sprites"]
position = Vector2( 0.129796, 109.51 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="Sprite14" type="Sprite" parent="Sprites"]
position = Vector2( -118.502, -0.749153 )
texture = ExtResource( 11 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 9
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -1.41447, 57.7035 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0.000552091, -123.61 )
shape = SubResource( 6 )

[node name="AreaDeAtraccion" parent="." instance=ExtResource( 12 )]
modulate = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotacion_antihorario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="ImpactosSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
